Related fdo#53872: CRASH - opening database report

Change-Id: Ib7fe1691f9114f38ae1551e2aa6c4bbf48096391